fix: add module opens for all selected test classes
Pass selected class JDT handles to the launch delegate so Eclipse JDT can generate VM arguments for every test package without rediscovering the project.

Fixes #1883

Copilot-Session: c3cd113b-dad4-4d4d-90c2-60abfd204405