@@ -12,6 +12,7 @@
 package com.microsoft.java.test.plugin.launchers;
 
 import static org.junit.Assert.assertEquals;
+import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertTrue;
 
 import java.util.Arrays;
@@ -19,6 +20,9 @@ import java.util.List;
 
 import org.eclipse.core.resources.IProject;
 import org.eclipse.core.runtime.NullProgressMonitor;
+import org.eclipse.jdt.core.IJavaProject;
+import org.eclipse.jdt.core.IType;
+import org.eclipse.jdt.core.JavaCore;
 import org.junit.Test;
 
 import com.microsoft.java.test.plugin.AbstractProjectsManagerBasedTest;
@@ -38,5 +42,44 @@ public class JUnitLaunchConfigurationDelegateTest extends AbstractProjectsManage
 
         assertEquals(0, response.getStatus());
         assertTrue(response.getBody().workingDirectory.endsWith("simple"));
+    }
+
+    @Test
+    public void testAddOpensForAllSelectedPackagesInModularProject() throws Exception {
+        final IProject project = importProjects("modular-junit").get(0);
+        final IJavaProject javaProject = JavaCore.create(project);
+        final IType firstTest = javaProject.findType("p1.FirstTest");
+        final IType secondTest = javaProject.findType("p2.SecondTest");
+        assertNotNull(firstTest);
+        assertNotNull(secondTest);
+
+        final String launchRequest = String.format(
+                "{\"projectName\":%s,\"testLevel\":5,\"testKind\":0,\"testNames\":[%s,%s],"
+                        + "\"testHandles\":[%s,%s]}",
+                toJsonString(javaProject.getElementName()),
+                toJsonString(firstTest.getFullyQualifiedName()),
+                toJsonString(secondTest.getFullyQualifiedName()),
+                toJsonString(firstTest.getHandleIdentifier()),
+                toJsonString(secondTest.getHandleIdentifier()));
+
+        final Response<JUnitLaunchArguments> response = JUnitLaunchUtils.resolveLaunchArgument(
+                Arrays.asList(launchRequest), new NullProgressMonitor());
+
+        assertEquals(0, response.getStatus());
+        final List<String> vmArguments = Arrays.asList(response.getBody().vmArguments);
+        final String firstPackagePrefix = "com.example.modular/p1=";
+        final String firstPackageOpen = vmArguments.stream()
+                .filter(argument -> argument.startsWith(firstPackagePrefix))
+                .findFirst()
+                .orElseThrow(() -> new AssertionError("Missing --add-opens for p1"));
+        final String targets = firstPackageOpen.substring(firstPackagePrefix.length());
+        final String secondPackageOpen = "com.example.modular/p2=" + targets;
+        assertEquals("--add-opens", vmArguments.get(vmArguments.indexOf(firstPackageOpen) - 1));
+        assertTrue(vmArguments.contains(secondPackageOpen));
+        assertEquals("--add-opens", vmArguments.get(vmArguments.indexOf(secondPackageOpen) - 1));
+    }
+
+    private static String toJsonString(String value) {
+        return "\"" + value.replace("\\", "\\\\").replace("\"", "\\\"") + "\"";
     }
 }
